@@ -1,8 +1,8 @@
-/*
-    Copyright 2001-2016, Felspar Co Ltd. http://support.felspar.com/
+/**
+    Copyright 2001-2018, Felspar Co Ltd. <http://support.felspar.com/>
+
     Distributed under the Boost Software License, Version 1.0.
-    See accompanying file LICENSE_1_0.txt or copy at
-        http://www.boost.org/LICENSE_1_0.txt
+    See <http://www.boost.org/LICENSE_1_0.txt>
 */
 
 
@@ -116,7 +116,9 @@ boost::filesystem::path fostlib::join_paths(
     const boost::filesystem::path &root,
     const boost::filesystem::path &path
 ) {
-    if ( path.is_complete() || coerce<string>(path)[0] == '/' ) {
+    if ( path.empty() ) {
+        return root;
+    } else if ( path.is_complete() || coerce<string>(path)[0] == '/' ) {
         return path;
     } else {
         return root / path;
